[tool.poetry]
name = "absolute-ins"
version = "0.1.0"
description = ""
authors = ["sergandri <sergandri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.1"
statsmodels = "^0.14.2"
pydantic = "^2.7.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
polars = "^0.20.29"
openpyxl = "^3.1.2"
scikit-learn = "^1.5.0"
catboost = "^1.2.5"
optuna = "^3.6.1"
lightgbm = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
